# c-term

./: .dockerignore  Dockerfile  README.md  nginx.container.conf  pubspec.yaml  supervisord.conf
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/cterm/c_term/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/models/: keyboard_key.dart  ssh_connection.dart
lib/providers/: connections_provider.dart  keyboard_provider.dart  terminal_provider.dart
lib/screens/: auth_screen.dart  connection_form_screen.dart  home_screen.dart  keyboard_settings_screen.dart  login_screen.dart  terminal_screen.dart  user_management_screen.dart  workspace_screen.dart
lib/services/: api_service.dart  auth_service.dart  foreground_service.dart  ssh_service.dart  storage_service.dart  update_service.dart
lib/widgets/: rdp_view_panel.dart  rdp_view_stub.dart  terminal_keyboard.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rdp-proxy/: Cargo.toml
rdp-proxy/src/: auth.rs  db.rs  main.rs  rdp.rs  users.rs
test/: widget_test.dart
web/: index.html  manifest.json
web/rdp/: ironrdp-bridge.js  ironrdp_web.js  ironrdp_web_bg.wasm
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+1 files in other folders)
